# Sagu

./: .gitignore  EPITAPH.md  ISSUES.md  LICENSE  README.md  TODO.md  pyproject.toml
src/: app.py  ssg.py  structures.py
src/sagu/: app.py  kickstart.py  library.py  organizer.py  post.py
src/sagu/resources/: template_settings.toml
src/sagu/resources/themes/sagu/: breadcrumb.jinja  menu.jinja
src/ssg/: app.py  builder.py  kickstart.py  library.py  organizer.py  post.py  structures.py
src/ssg/resources/themes/basic/: base.html
src/ssg/resources/themes/sagu/: base.html  base.html.jinja  content.jinja  index.jinja  menu.html.jinja
src/ssg/resources/themes/sagu/static/css/: base.css
tests/: context.py  test_app.py  test_builder.py  test_kickstart.py  test_library.py  test_organizer.py  test_post.py  test_remaining.py  tests.py  utils.py  utils_for_testing.py
tests/assets/: basic.toml  basic_paths.toml  example.toml  no_meta.toml  paths.toml  post2.toml  post3.toml  results.py  simple_ok_post.toml  simple_ok_post_with_markdown_content.toml  simple_post_unsafe_slug.toml  wrong_content.toml  wrong_meta.toml
tests/assets/TestBuilder/: basic_paths.toml  index.html  index.jinja  simple_ok_post_with_markdown_content.html
tests/assets/TestBuilder/full/: full.html  full.jinja  paths.toml
tests/assets/TestGenerateProject/defaultproject/: paths.toml
tests/assets/TestGenerateProject/loremipsum/: settings.toml
tests/assets/TestGenerateProject/testproject/: settings.toml
tests/assets/TestGenerateProject/titulocomacento/: settings.toml
tests/assets/TestGenerateProject/titulocomacento/themes/basic/: base.html
tests/assets/TestLibrary/: paths.toml  paths_with_useless.toml
tests/assets/TestMainGenerate/result/titulocomacento/: paths.toml
tests/assets/TestMainGenerate/result/titulocomacento/content/: akita.toml  hokkaido.toml  mastiff.toml  siamese.toml
tests/assets/TestMainGenerate/result/titulocomacento/output/animals/cats/: siamese-cat.html
tests/assets/TestMainGenerate/result/titulocomacento/themes/: sagu
tests/assets/TestOrganizer/: index.jinja  index.toml
tests/assets/TestOrganizer/about/getting_started/: document-3.html  index.html
tests/assets/TestPostsCollection/: paths.toml  post1.toml  post2.toml
tests/assets/TestReader/: no_content.toml  no_meta.toml  wrong_content.toml  wrong_meta.toml
titulocomacento/: paths.toml  settings.toml
titulocomacento/content/: akita.toml  donskoy.toml  kurilian-bobtail.toml  siamese.toml
titulocomacento/output/animals/cats/: donskoy.html  kurilian-bobtail-has-a-bobbed-tail.html  siamese-cat.html
titulocomacento/output/animals/dogs/: the-ancient-hokkaido.html  the-colossal-mastiff.html  the-noble-akita.html
titulocomacento/themes/: sagu
