[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagu"
dynamic = ["version"]
description = 'A static website generator.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "AlexHorta", email = "buey.horta@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"Markdown>=3.7",
"Jinja2>=3.1.5",
"tomli-w>=1.1.0"]

[project.urls]
Documentation = "https://github.com/AlexPHorta/Sagu#readme"
Issues = "https://github.com/AlexPHorta/Sagu/issues"
Source = "https://github.com/AlexPHorta/Sagu"

[tool.hatch.version]
path = "src/sagu/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/sagu tests}"

[tool.coverage.run]
source_pkgs = ["sagu", "tests"]
branch = true
parallel = true
omit = [
  "src/sagu/__about__.py",
]

[tool.coverage.paths]
sagu = ["src/sagu", "*/sagu/src/sagu"]
tests = ["tests", "*/sagu/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
